# PCO-Labo3-Usines

./: README.md  rapport.md  report.md
code/: .gitignore  CMakeLists.txt  costs.h  display.cpp  display.h  extractor.cpp  extractor.h  factory.cpp  factory.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  seller.cpp  seller.h  utils.cpp  utils.h  wholesale.cpp  wholesale.h  windowinterface.cpp  windowinterface.h
code/tests/: FactoryTest.cpp  tests.cpp
